Client-side modules should be compilable with jdk8